# jetson-dev-setup

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP-v0.5.0.md  ROADMAP.md  SECURITY.md  SETUP-PLAN.md  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: README.md
arasul_tui/: __init__.py  app.py  commands.py  install.sh
arasul_tui/commands/: __init__.py  ai.py  browser_cmd.py  expose_cmd.py  git_ops.py  mcp.py  meta.py  n8n_cmd.py  project.py  security.py  system.py  tailscale_cmd.py
arasul_tui/core/: __init__.py  auth.py  browser.py  cache.py  claude_json.py  constants.py  docker_info.py  git_info.py  gitops.py  interactive.py  n8n_client.py  n8n_mcp.py  n8n_project.py  platform.py  projects.py  registry.py  router.py  scaffold.py  security.py  session.py  setup_wizard.py  shell.py  state.py  templates.py  theme.py  types.py  ui.py
arasul_tui/core/ui/: __init__.py  dashboard.py  output.py  panels.py
arasul_tui/providers/: __init__.py  base.py  claude.py  codex.py  manager.py
config/: bash_aliases  daemon.json.template  mac-ssh-config  motd-arasul  tmux.conf
config/aliases/: common  jetson  raspberry_pi
config/n8n/: .env.example  CLAUDE.md.template  docker-compose.yml  settings.json
config/templates/api/: Caddyfile  Dockerfile  app.py  docker-compose.yml  requirements.txt
docs/: n8n-integration-plan.md
lib/: common.sh  detect.sh
scripts/: 01-system-optimize.sh  02-network-setup.sh  03-ssh-harden.sh  04-nvme-setup.sh  04-storage-setup.sh  05-docker-setup.sh  06-devtools-setup.sh  07-quality-of-life.sh  08-browser-setup.sh  09-n8n-setup.sh  10-miniforge-setup.sh
tests/: conftest.py  test_ai_cmd.py  test_auth.py  test_browser.py  test_browser_cmd.py  test_cache.py  test_claude_json.py  test_commands.py  test_create_template.py  test_dashboard_n8n.py  test_detect_sh.py  test_docker_info.py  test_expose.py  test_fuzzy.py  test_git_info.py  test_git_ops.py  test_help.py  test_mcp_cmd.py  test_n8n_access.py  test_n8n_client.py  test_n8n_cmd.py  test_n8n_mcp.py  test_n8n_project.py  test_platform.py  test_projects.py  test_registry.py  test_router.py  test_scaffold.py  test_security_cmd.py  test_setup_wizard.py  test_shell.py  test_state.py  test_suggestions.py  test_system_cmd.py  test_tailscale_cmd.py  test_templates.py  test_tui_integration.py
(+11 files in other folders)
