[project]
name = "arasul-tui"
version = "0.1.0"
description = "Arasul Server TUI for Jetson"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "prompt-toolkit>=3.0.0",
  "rich>=13.0.0",
  "psutil>=5.9.0",
  "PyYAML>=6.0.0",
  "playwright>=1.51.0",
]

[project.scripts]
arasul-tui = "arasul_tui.app:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arasul_tui*"]
