[project]
name = "arasul"
version = "0.5.0"
description = "Interactive TUI for managing headless Linux SBC development servers (Jetson, Raspberry Pi, generic)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Kolja Schoepe"}]
keywords = ["jetson", "raspberry-pi", "sbc", "headless", "ssh", "development", "tui", "nvidia", "setup"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development",
]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.51.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8.0",
]

[project.urls]
Homepage = "https://github.com/koljaschoepe/arasul"
Repository = "https://github.com/koljaschoepe/arasul"
Issues = "https://github.com/koljaschoepe/arasul/issues"

[project.scripts]
arasul = "arasul_tui.app:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["arasul_tui*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["arasul_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
